# kicad_plugins

./: .gitignore  README.md  __init__.py  projects.json
Bowtie_Creator/: bowtie_creator.py  bowtie_creator_action.py
Kicadium_DRC/: drc_creator_action.py
Project_Creator/: board_creator.py  config.py  creator.py  file_operations.py  gh_functions.py  git_functions.py  github_helper.py  kicad_creator.py  kicad_project_creator.py  kicad_project_creator_action.py  logging_handler.py  os_functions.py  project_creator.py  project_creator_action.py  project_creator_actions.py  project_funcs.py  pyproject.toml  readme_functions.py  repo_tracker.py  ui.py
Project_Creator/project_creator/: git_functions.py  os_functions.py  project_creator_actions.py  ui.py
Project_Creator/project_creator/creators/: board_creator.py  project_creator.py  repo_creator.py  software_creator.py  subproject_creator.py
Project_Creator/project_creator/trackers/: board_tracker.py  project_tracker.py  repo_tracker.py  software_tracker.py
Project_Creator/src/: config.py  gh_functions.py  git_functions.py  kicad_project_creator.py  os_functions.py  project_creator.py
Project_Creator/trackers/: repo_tracker.py
argonaut/argonaut/: main.py
argonaut/argonaut/config/: config.py  document_type.py  supported_document_types.py
argonaut/argonaut/creator/: creator.py  document_creator.py  project_creator.py
argonaut/argonaut/document_tracker/: document_tracker.py
argonaut/argonaut/gui/: main_frame.py
argonaut/argonaut/misc/: git.py
utils/: github_helper.py  platform.py  ui.py
(+5 files in other folders)
